--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "@sendgrid/mail": "^7.6.0",
     "aws-sdk": "^2.1063.0",
     "lodash": "^4.17.20"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
